manifests/services/orderservice.yaml
#
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this
# software and associated documentation files (the "Software"), to deal in the Software
# without restriction, including without limitation the rights to use, copy, modify,
# merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
# PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
# HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-v1
  namespace: abshop
spec:
  selector:
    matchLabels:
      app: orderservice
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: orderservice
        version: v1
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: /api/v1/metrics
    spec:
      containers:
        - name: orderservice
          image: ckassen/orderservice:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: "/api/v1/healthz"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            httpGet:
              path: "/api/v1/healthz"
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice-v1
  namespace: abshop
spec:
  type: ClusterIP
  selector:
    app: orderservice
    version: v1
  ports:
  - name: http
    port: 8080
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: orderservice
  namespace: abshop
spec:
  awsName: orderservice.abshop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: orderservice-router
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  namespace: abshop
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
  - name: http
    port: 8080
